# ShawCirclePrompt_QuantathonV2

./: Analysis.md  CLAUDE.md  DASHBOARD_README.md  Qiskit_version.ipynb  Qiskit_version_with_circuit.ipynb  Quantum_PCA_Analysis.md  README.md  challenge_2.ipynb  enhanced_stock_dashboard.py  larger_dataset_analysis copy.ipynb  larger_dataset_analysis.ipynb  main.py  presentation 2.html  presentation.html  pyproject.toml  shaw_circle_challenge.ipynb  stock_dashboard.py  streamlit.ipynb  yubraj_qiskit_implementation.ipynb
data/: prices.csv  prices_.csv
