[project]
name = "shawcircleprompt-quantathonv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dimod>=0.12.21",
    "dwave-neal>=0.6.0",
    "dwave-ocean-sdk>=9.0.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "qiskit>=2.2.1",
    "qiskit-algorithms>=0.4.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "yfinance>=0.2.66",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "seaborn>=0.13.0",
]
